--- a/trabalho/index.html
+++ b/trabalho/index.html
@@ -1,18 +1,18 @@
-<!doctype html>
 <html lang="pt-BR">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pula-Pula Game</title>
-    <link rel="stylesheet" href="style.css">
-</head> 
+    <link rel="stylessheet" href="style.css">
+
+</head>
 <body>
-    <div id="game-container">
-        <canvas id="gamecanvas" width="600" height="200"></canvas>
-        <div id="score">0</div>
-        <div id="message">Pressione ESPAÇO ou toque na tela para pular. Comece!</div>
-    </div>
-    <script src="script.js"></script>
+    <div id="game-container>"
+        <canvas id="gameCanvas" width="600" height="200"></canvas>
+        <div id="score">Pontução2.0</div>
+        <div id+"message">PressioneESPAÇO ou Toque na tela para pular/Começa</div>
+</div>
+    <script src+"script.js"></script>
 </body>
-</html> 
---- IGNORE ---
+</html>
